fix z-index

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -24,7 +24,7 @@ product-info {
     display: block;
     position: sticky;
     top: 7rem;
-    z-index: 2;
+    z-index: 1;
   }
 
   .product--thumbnail .thumbnail-list {
